--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "json-colorizer": "^3.0.1",
     "lucide-react": "^0.516.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
